# crew-ai

./: CODE_STRUCTURE_DIAGRAM.md  DEPLOYMENT.md  README.md  cli_jane.py  hackernews_briefing.md  hackernews_tldr_summaries.md  jane_search_hackernews.py  personalized_hackernews_briefing.md  pyproject.toml  report.md  requirements.txt  run_fetch_stories.py  run_hackernews.py  streamlit_app.py
.streamlit/: hackernews_tldr_summaries.md
src/janeai/: crew.py  main.py
src/janeai/config/: agents.yaml  tasks.yaml
src/janeai/tools/: custom_tool.py
src/janeai/voice/: __init__.py  tts_service.py  voice_interface.py  web_speech.py  whisper_api.py  whisper_transcriber.py
