[project]
name = "janeai"
version = "0.1.0"
description = "JaneAi using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
    "openai>=1.107.0",
    "streamlit>=1.28.0",
]

[project.scripts]
janeai = "janeai.main:run"
run_crew = "janeai.main:run"
train = "janeai.main:train"
replay = "janeai.main:replay"
test = "janeai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
